adding Carti News

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="item">خانه </div>
 </div>
 <img
-  src="https://static.farakav.com/v3content/assets/img/identity/varzesh3-logo.png"
+  src="varzesh3-logo.png"
   alt="Varzesh3" />
   </div>
 
@@ -108,7 +108,21 @@
 
 
   <div class="Carti">
-    <h1>پخش کارتی اخبار ورزشکاران</h1>
+    <div class="CartiItem">
+<h3>فریادهای عزیزی خادم خطاب به مخاطب خاص</h3>
+<p>رییس فدراسیون فوتبال ایران در کانون مربیان صحبت‌های تند و تیزی را درباره مخالفان خود انجام داد</p>
+</div>
+  
+  <div class="CartiItem">
+    <h3>!عجب دنیایی شده؛ رونالدو هم پرس می‌کند</h3>
+    <p>عملکرد کریستیانو رونالدو در دیدار امروز مقابل کریستال پالاس مورد توجه هواداران فوتبال قرار گرفته است</p>
+  </div>
+
+<div class="CartiItem">
+  <h3>علیپور به بیرانوند: با من کری نخوان</h3>
+  <p>تقصیر خود علیرضا بیرانوند بود که کری را زودتر آغاز کرده و در برنامه فوتبال برتر درباره علیپور و تیمش صحبت کرد</p>
+</div>
+
   </div>
 
   <div class="footer">
